--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,16 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+
+# Main information
+project_version=1.0.1
+mc_version=1.19.2
+forge_version=43.1.53
+
+# Dependancy information
+better_combat_version=1.4.5+1.19
+cloth_config_version=8.2.88
+player_anim_version=0.4.0-test4
+terra_version=4013816
+byg_version=4027228
+jei_version=11.4.0.286
